--- a/Team DEVSPROUT/Landing Page/index.html
+++ b/Team DEVSPROUT/Landing Page/index.html
@@ -1038,7 +1038,7 @@ At DevSprout, we aim to cultivate a space where students can collaborate, learn,
            <h2>Bruce</h2>
             <p>A passionate artist, Bruce brings creativity to life through his paintings and diverse artworks, blending technique and emotion in every piece.
             </p>  
-            <a href="https://github.com/brucellaneouss/JuanArt/blob/main/JuanArtWeb/index.html" class="download-button">Visit Profile</a>
+            <a href="https://brucellaneouss.github.io/JuanArt/" class="download-button">Visit Profile</a>
         </div>
       </div>
      
